[tool.poetry]
name = "papka"
version = "0.1.0"
description = ""
authors = ["Yana_Kosareva <k.osareva@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
